--- a/src/main/resources/com/example/demo/LoginPage.fxml
+++ b/src/main/resources/com/example/demo/LoginPage.fxml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.collections.FXCollections?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginController">
+<AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginController">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="301.0" style="-fx-background-color: #51E5FF;">
+      <AnchorPane prefHeight="600.0" prefWidth="301.0" style="-fx-background-color: #51E5FF;">
          <children>
             <Text layoutX="36.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EZ PHARMACY" textAlignment="CENTER" wrappingWidth="250.21630859375">
                <font>
@@ -21,14 +19,20 @@
             </Text>
          </children>
       </AnchorPane>
-      <Text layoutX="344.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login to view Controls" textAlignment="CENTER" wrappingWidth="194.3798828125">
+      <Text layoutX="375.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login to view Controls" textAlignment="CENTER" wrappingWidth="194.3798828125">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField layoutX="362.0" layoutY="125.0" promptText="Enter emplyee id" />
-      <TextField accessibleRole="PASSWORD_FIELD" layoutX="362.0" layoutY="174.0" promptText="Password" />
-      <Button layoutX="414.0" layoutY="279.0" mnemonicParsing="false" text="Login" />
+      <TextField layoutX="386.0" layoutY="222.0" promptText="Enter emplyee id" />
+      <TextField accessibleRole="PASSWORD_FIELD" layoutX="386.0" layoutY="287.0" promptText="Password" />
+      <Button layoutX="428.0" layoutY="429.0" mnemonicParsing="false" text="Login" />
+      <SplitMenuButton layoutX="390.0" layoutY="354.0" mnemonicParsing="false" text="Role">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Manager" />
+          <MenuItem mnemonicParsing="false" text="Cashier" />
+        </items>
+      </SplitMenuButton>
 
    </children>
 </AnchorPane>
