--- a/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AdminController">
+<AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.AdminController">
    <children>
       <Text layoutX="311.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Manager!">
          <font>
