--- a/src/main/resources/com/Pharmacy/Project/LoginPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/LoginPage.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginController">
+<AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.LoginController">
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="301.0" style="-fx-background-color: #51E5FF;">
          <children>
