--- a/src/main/resources/com/Pharmacy/Project/AddMedicinePage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/AddMedicinePage.fxml
@@ -22,20 +22,20 @@
             </font>
         </Label>
         <TextField fx:id="searchMed" layoutX="179.0" layoutY="101.0" prefHeight="28.0" prefWidth="392.0" promptText="Type Medicine Name" />
-        <Button fx:id="searchButton" alignment="CENTER" contentDisplay="CENTER" layoutX="582.0" layoutY="101.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="62.0" style="-fx-background-color: #009ee2; -fx-border-width: 1; -fx-border-radius: 15; -fx-background-radius: 15;" text="Search" textAlignment="CENTER" textFill="WHITE">
+        <Button fx:id="searchBut" alignment="CENTER" contentDisplay="CENTER" layoutX="582.0" layoutY="101.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="62.0" style="-fx-background-color: #009ee2; -fx-border-width: 1; -fx-border-radius: 15; -fx-background-radius: 15;" text="Search" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font name="Verdana" size="12.0" />
             </font>
         </Button>
-        <ListView fx:id="medicinesListView" layoutX="176.0" layoutY="172.0" prefHeight="200.0" prefWidth="468.0" />
+        <ListView fx:id="medListView" layoutX="176.0" layoutY="172.0" prefHeight="200.0" prefWidth="468.0" />
         <AnchorPane layoutX="150.0" layoutY="482.0" prefHeight="118.0" prefWidth="600.0">
             <children>
-                <Button fx:id="proceedButton" layoutX="473.0" layoutY="45.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Proceed" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                <Button fx:id="proceedBut" layoutX="473.0" layoutY="45.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Proceed" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                     <font>
                         <Font size="13.0" />
                     </font>
                 </Button>
-                <Button fx:id="proceedButton1" layoutX="392.0" layoutY="45.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                <Button fx:id="retBut" layoutX="392.0" layoutY="45.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                     <font>
                         <Font size="13.0" />
                     </font>
@@ -52,12 +52,12 @@
                 <Font size="14.0" />
             </font>
         </TextField>
-        <TextField fx:id="quantity" layoutX="444.0" layoutY="442.0" prefHeight="30.0" prefWidth="200.0" promptText="Quantity" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0 0 1 0;">
+        <TextField fx:id="quan" layoutX="444.0" layoutY="442.0" prefHeight="30.0" prefWidth="200.0" promptText="Quantity" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0 0 1 0;">
             <font>
                 <Font size="14.0" />
             </font>
         </TextField>
-        <TextField fx:id="company_name" layoutX="444.0" layoutY="402.0" prefHeight="30.0" prefWidth="200.0" promptText="Company Name" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0 0 1 0;">
+        <TextField fx:id="comp" layoutX="444.0" layoutY="402.0" prefHeight="30.0" prefWidth="200.0" promptText="Company Name" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0 0 1 0;">
             <font>
                 <Font size="14.0" />
             </font>
