--- a/src/main/resources/com/Pharmacy/Project/LoginPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/LoginPage.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.LoginController">
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="301.0" style="-fx-background-color: #51E5FF;">
+      <AnchorPane fx:id="scenePane" prefHeight="600.0" prefWidth="301.0" style="-fx-background-color: #51E5FF;">
          <children>
             <Text layoutX="36.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EZ PHARMACY" textAlignment="CENTER" wrappingWidth="250.21630859375">
                <font>
@@ -24,15 +24,11 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField layoutX="386.0" layoutY="222.0" promptText="Enter emplyee id" />
-      <TextField accessibleRole="PASSWORD_FIELD" layoutX="386.0" layoutY="287.0" promptText="Password" />
-      <Button layoutX="428.0" layoutY="429.0" mnemonicParsing="false" text="Login" />
-      <SplitMenuButton layoutX="390.0" layoutY="354.0" mnemonicParsing="false" text="Role">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Manager" />
-          <MenuItem mnemonicParsing="false" text="Cashier" />
-        </items>
-      </SplitMenuButton>
+      <TextField id="id" fx:id="loginId" layoutX="386.0" layoutY="222.0" promptText="Enter emplyee id" />
+      <TextField id="password" fx:id="loginPassword" accessibleRole="PASSWORD_FIELD" layoutX="386.0" layoutY="287.0" promptText="Password" />
+      <Button id="login-btn" fx:id="loginButton" layoutX="428.0" layoutY="429.0" mnemonicParsing="false" onAction="#login" text="Login" />
+      <ChoiceBox fx:id="userchoice" layoutX="391.0" layoutY="375.0" prefWidth="150.0" />
+      <Label fx:id="userRole" layoutX="391.0" layoutY="342.0" text="Role" />
 
    </children>
 </AnchorPane>
