--- a/src/main/resources/com/Pharmacy/Project/AddMedicinePage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/AddMedicinePage.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.CashierController">
     <children>
@@ -30,7 +31,7 @@
         <ListView fx:id="medListView" layoutX="176.0" layoutY="172.0" prefHeight="200.0" prefWidth="468.0" />
         <AnchorPane layoutX="150.0" layoutY="482.0" prefHeight="118.0" prefWidth="600.0">
             <children>
-                <Button fx:id="proceedBut" layoutX="473.0" layoutY="45.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Proceed" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                <Button fx:id="proceedBut" layoutX="473.0" layoutY="45.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Add" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                     <font>
                         <Font size="13.0" />
                     </font>
@@ -62,5 +63,6 @@
                 <Font size="14.0" />
             </font>
         </TextField>
+      <Text layoutX="179.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Medicines" />
     </children>
 </AnchorPane>
