--- a/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.AdminController">
+<AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.AdminController">
    <children>
       <Text layoutX="311.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Manager!">
          <font>
@@ -20,7 +20,11 @@
       <Button layoutX="469.0" layoutY="310.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="147.0" text="Remove Medicine" />
       <AnchorPane prefHeight="600.0" prefWidth="140.0" style="-fx-background-color: purple;">
          <children>
-            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="Back" />
+            <Button fx:id="retBut" layoutX="28.0" layoutY="11.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
