--- a/src/main/resources/com/Pharmacy/Project/Transaction.fxml
+++ b/src/main/resources/com/Pharmacy/Project/Transaction.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.CashierController">
     <children>
         <ImageView fitHeight="600.0" fitWidth="750.0" layoutX="2.0" layoutY="-1.0">
             <image>
@@ -16,26 +16,39 @@
             </image>
         </ImageView>
         <ListView fx:id="MedicineList" layoutX="181.0" layoutY="95.0" prefHeight="275.0" prefWidth="538.0" />
-        <AnchorPane layoutX="150.0" layoutY="482.0" prefHeight="118.0" prefWidth="600.0">
+        <AnchorPane layoutX="150.0" layoutY="442.0" prefHeight="158.0" prefWidth="600.0">
             <children>
-                <Button fx:id="proceedButton" layoutX="473.0" layoutY="45.0" mnemonicParsing="false"  prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Proceed" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                <Button fx:id="proceedButton" layoutX="372.0" layoutY="106.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Proceed" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                     <font>
                         <Font size="13.0" />
                     </font></Button>
-                <Label fx:id="totalCost" layoutX="25.0" layoutY="40.0" prefHeight="38.0" prefWidth="209.0" text="Total Cost -" textAlignment="CENTER">
+                <Label fx:id="totalLabel" layoutX="20.0" layoutY="14.0" prefHeight="38.0" prefWidth="209.0" text="Total Cost -" textAlignment="CENTER">
                     <font>
                         <Font name="Verdana" size="15.0" />
                     </font></Label>
-                <Button fx:id="back" layoutX="392.0" layoutY="45.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Label fx:id="totalCost1" layoutX="20.0" layoutY="60.0" prefHeight="38.0" prefWidth="116.0" text="Amount Paid : " textAlignment="CENTER">
+               <font>
+                  <Font name="Verdana" size="15.0" />
+               </font>
+            </Label>
+            <TextField layoutX="140.0" layoutY="66.0" />
+            <Label fx:id="totalCost2" layoutX="20.0" layoutY="106.0" prefHeight="38.0" prefWidth="209.0" text="Remaining : " textAlignment="CENTER">
+               <font>
+                  <Font name="Verdana" size="15.0" />
+               </font>
+            </Label>
+            </children>
+        </AnchorPane>
+        <AnchorPane prefHeight="600.0" prefWidth="150.0" style="-fx-background-color: #8fbac2;">
+         <children>
+                <Button fx:id="back" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                     <font>
                         <Font size="13.0" />
                     </font>
                 </Button>
-            </children>
-        </AnchorPane>
-        <AnchorPane prefHeight="600.0" prefWidth="150.0" style="-fx-background-color: #8fbac2;" />
+         </children></AnchorPane>
         <Label alignment="CENTER" layoutX="411.0" layoutY="232.0" prefHeight="55.0" prefWidth="78.0" />
-        <Label layoutX="361.0" layoutY="26.0" text="Sale Bill">
+        <Label layoutX="361.0" layoutY="31.0" text="Sale Reciept">
             <font>
                 <Font name="Arial Black" size="27.0" />
             </font>
