--- a/src/main/resources/com/Pharmacy/Project/CashierPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/CashierPage.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="600" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.CashierController">
    <children>
       <Button fx:id="saleBtn" layoutX="180.0" layoutY="193.0" mnemonicParsing="false" onAction="#startSale" text="StartSale" />
+      <Button fx:id="handleReturns" layoutX="375.0" layoutY="207.0" mnemonicParsing="false" onAction="#handleReturnFunction" text="ReturnMedicine" />
    </children>
 </AnchorPane>
