--- a/src/main/resources/com/Pharmacy/Project/handleReturns.fxml
+++ b/src/main/resources/com/Pharmacy/Project/handleReturns.fxml
@@ -23,7 +23,7 @@
                                 </font>
                             </Button>
                         </children></VBox>
-                    <ListView layoutX="185.0" layoutY="146.0" prefHeight="345.0" prefWidth="433.0" />
+                    <ListView fx:id="saleView" layoutX="185.0" layoutY="146.0" prefHeight="345.0" prefWidth="433.0" />
                     <Label layoutX="185.0" layoutY="526.0" prefHeight="26.0" prefWidth="275.0" text="Refund : ">
                         <font>
                             <Font size="20.0" />
@@ -39,7 +39,7 @@
                      <Font name="System Bold" size="34.0" />
                   </font>
                </Label>
-               <Button layoutX="633.0" layoutY="284.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #009ee2; -fx-background-radius: 15;" text="Remove" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <Button layoutX="633.0" layoutY="284.0" mnemonicParsing="false" onAction="#removeItem" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #009ee2; -fx-background-radius: 15;" text="Remove" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                   <font>
                      <Font size="13.0" />
                   </font>
@@ -50,7 +50,7 @@
                      <Font size="15.0" />
                   </font>
                </Text>
-               <Button layoutX="452.0" layoutY="93.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="88.0" style="-fx-background-color: #009ee2; -fx-background-radius: 15;" text="Get Sale" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <Button fx:id="getBtn" layoutX="452.0" layoutY="93.0" mnemonicParsing="false" onAction="#getSale" prefHeight="32.0" prefWidth="88.0" style="-fx-background-color: #009ee2; -fx-background-radius: 15;" text="Get Sale" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                   <font>
                      <Font size="13.0" />
                   </font>
