--- a/src/main/resources/com/Pharmacy/Project/LoginPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/LoginPage.fxml
@@ -3,20 +3,28 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.LoginController">
    <children>
-      <AnchorPane fx:id="scenePane" prefHeight="600.0" prefWidth="301.0" style="-fx-background-color: #51E5FF;">
+      <AnchorPane fx:id="scenePane" prefHeight="600.0" prefWidth="257.0" style="-fx-background-color: #51E5FF;">
          <children>
-            <Text layoutX="36.0" layoutY="159.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EZ PHARMACY" textAlignment="CENTER" wrappingWidth="250.21630859375">
+            <Text layoutX="25.0" layoutY="172.0" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EZ       PHARMACY" textAlignment="CENTER" wrappingWidth="250.21630859375">
                <font>
                   <Font name="Arial" size="36.0" />
                </font>
             </Text>
+            <ImageView fitHeight="59.0" fitWidth="54.0" layoutX="161.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/pharmacy.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <Text layoutX="375.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login to view Controls" textAlignment="CENTER" wrappingWidth="194.3798828125">
@@ -24,11 +32,21 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField id="id" fx:id="loginId" layoutX="386.0" layoutY="222.0" promptText="Enter emplyee id" />
-      <TextField id="password" fx:id="loginPassword" accessibleRole="PASSWORD_FIELD" layoutX="386.0" layoutY="287.0" promptText="Password" />
-      <Button id="login-btn" fx:id="loginButton" layoutX="428.0" layoutY="429.0" mnemonicParsing="false" onAction="#login" text="Login" />
-      <ChoiceBox fx:id="userchoice" layoutX="391.0" layoutY="375.0" prefWidth="150.0" />
-      <Label fx:id="userRole" layoutX="391.0" layoutY="342.0" text="Role" />
+      <TextField id="id" fx:id="loginId" layoutX="386.0" layoutY="196.0" promptText="Enter emplyee id" />
+      <Button id="login-btn" fx:id="loginButton" layoutX="413.0" layoutY="410.0" mnemonicParsing="false" onAction="#login" prefHeight="36.0" prefWidth="106.0" text="Login" />
+      <ChoiceBox fx:id="userchoice" layoutX="391.0" layoutY="326.0" prefWidth="150.0" />
+      <Label fx:id="userRole" layoutX="350.0" layoutY="330.0" text="Role" />
+      <PasswordField fx:id="loginPassword" layoutX="386.0" layoutY="261.0" promptText="Password" />
+      <ImageView fitHeight="26.0" fitWidth="33.0" layoutX="349.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../Assets/usernameIcon.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="26.0" fitWidth="33.0" layoutX="349.0" layoutY="261.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../Assets/passwordIcon.png" />
+         </image>
+      </ImageView>
 
    </children>
 </AnchorPane>
