--- a/src/main/resources/com/Pharmacy/Project/handleReturns.fxml
+++ b/src/main/resources/com/Pharmacy/Project/handleReturns.fxml
@@ -17,7 +17,7 @@
                 <children>
                     <VBox prefHeight="600.0" prefWidth="142.0" style="-fx-background-color: #8fbac2;">
                         <children>
-                            <Button fx:id="retBut" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" translateX="10.0" translateY="10.0" wrapText="true">
+                            <Button fx:id="retBut" mnemonicParsing="false" onAction="#goBack" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" translateX="10.0" translateY="10.0" wrapText="true">
                                 <font>
                                     <Font size="13.0" />
                                 </font>
