--- a/src/main/resources/com/Pharmacy/Project/startSale.fxml
+++ b/src/main/resources/com/Pharmacy/Project/startSale.fxml
@@ -16,7 +16,7 @@
             <children>
                 <VBox prefHeight="600.0" prefWidth="142.0" style="-fx-background-color: #8fbac2;">
                <children>
-                  <Button fx:id="retBut" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" translateX="10.0" translateY="10.0" wrapText="true">
+                  <Button fx:id="retBut" mnemonicParsing="false" onAction="#goBack" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" translateX="10.0" translateY="10.0" wrapText="true">
                      <font>
                         <Font size="13.0" />
                      </font>
@@ -37,7 +37,7 @@
                   <Font size="13.0" />
                </font>
             </Button>
-            <Button fx:id="payBtn" layoutX="520.0" layoutY="520.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" onAction="#payAmount" style="-fx-background-color: #009ee2; -fx-background-radius: 15;" text="Pay" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button fx:id="payBtn" layoutX="520.0" layoutY="520.0" mnemonicParsing="false" onAction="#payAmount" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #009ee2; -fx-background-radius: 15;" text="Pay" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="13.0" />
                </font>
