--- a/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
@@ -17,7 +17,7 @@
       <Button fx:id="orderBtn" layoutX="199.0" layoutY="310.0" mnemonicParsing="false" onAction="#orderMedicines" prefHeight="70.0" prefWidth="126.0" text="OrderMedicine" />
       <Button fx:id="addBtn" layoutX="335.0" layoutY="310.0" mnemonicParsing="false" onAction="#addMedicine" prefHeight="70.0" prefWidth="126.0" text="AddNewMedicine" />
       <Button fx:id="checkStock" layoutX="469.0" layoutY="163.0" mnemonicParsing="false" onAction="#ManageStock" prefHeight="70.0" prefWidth="147.0" text="ManageAvlStock" />
-      <Button layoutX="469.0" layoutY="310.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="147.0" text="Remove Medicine" />
+      <Button layoutX="469.0" layoutY="310.0" mnemonicParsing="false" onAction="#removeMedicine" prefHeight="70.0" prefWidth="147.0" text="Remove Medicine" />
       <AnchorPane prefHeight="600.0" prefWidth="140.0" style="-fx-background-color: purple;">
          <children>
             <Button fx:id="retBut" layoutX="28.0" layoutY="11.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
