--- a/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
@@ -13,7 +13,7 @@
          </font>
       </Text>
       <Button fx:id="reportBtn" layoutX="205.0" layoutY="163.0" mnemonicParsing="false" onAction="#showReport" prefHeight="70.0" prefWidth="115.0" text="Generate Report" />
-      <Button layoutX="333.0" layoutY="163.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="126.0" text="StockView" />
+      <Button layoutX="333.0" layoutY="163.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="126.0" onAction="#RegisterCashier" text="Register Cashier" />
       <Button fx:id="orderBtn" layoutX="199.0" layoutY="310.0" mnemonicParsing="false" onAction="#orderMedicines" prefHeight="70.0" prefWidth="126.0" text="OrderMedicine" />
       <Button fx:id="addBtn" layoutX="335.0" layoutY="310.0" mnemonicParsing="false" onAction="#addMedicine" prefHeight="70.0" prefWidth="126.0" text="AddNewMedicine" />
       <Button fx:id="checkStock" layoutX="469.0" layoutY="163.0" mnemonicParsing="false" onAction="#ManageStock" prefHeight="70.0" prefWidth="147.0" text="ManageAvlStock" />
