--- a/src/main/resources/com/Pharmacy/Project/startSale.fxml
+++ b/src/main/resources/com/Pharmacy/Project/startSale.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -9,6 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.CashierController">
     <top>
@@ -24,15 +24,13 @@
                </children></VBox>
                 <TextField fx:id="medId" layoutX="185.0" layoutY="75.0" promptText="Medicine ID" />
                 <TextField fx:id="quanField" layoutX="381.0" layoutY="75.0" promptText="Qty" />
-                <CheckBox layoutX="185.0" layoutY="126.0" mnemonicParsing="false" text="CashPayment" />
-                <ListView fx:id="saleList" layoutX="185.0" layoutY="186.0" prefHeight="305.0" prefWidth="433.0" />
-                <Button layoutX="188.0" layoutY="160.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="374.0" text="click to view available medicine" />
+                <ListView fx:id="saleList" layoutX="185.0" layoutY="173.0" prefHeight="318.0" prefWidth="433.0" />
                 <Label fx:id="totalLabel" layoutX="185.0" layoutY="526.0" prefHeight="26.0" prefWidth="275.0" text="Total Amount ">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Label>
-            <Button fx:id="addSale" layoutX="570.0" layoutY="72.0" mnemonicParsing="false" onAction="#addSale" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Add" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button fx:id="addSale" layoutX="578.0" layoutY="72.0" mnemonicParsing="false" onAction="#addSale" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Add" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="13.0" />
                </font>
@@ -42,6 +40,14 @@
                   <Font size="13.0" />
                </font>
             </Button>
+            <Text layoutX="185.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Sale" wrappingWidth="87.41845703125">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Text>
+            <Text layoutX="185.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" wrappingWidth="52.7158203125" />
+            <Text layoutX="254.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quantity" wrappingWidth="52.7158203125" />
+            <Text layoutX="345.0" layoutY="169.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price" wrappingWidth="52.7158203125" />
             </children>
         </AnchorPane>
     </top>
