--- a/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
@@ -1,30 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.AdminController">
    <children>
-      <Text layoutX="311.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Manager!">
+      <Text layoutX="354.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome Manager!">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Button fx:id="reportBtn" layoutX="205.0" layoutY="163.0" mnemonicParsing="false" onAction="#showReport" prefHeight="70.0" prefWidth="115.0" text="Generate Report" />
-      <Button layoutX="333.0" layoutY="163.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="126.0" onAction="#RegisterCashier" text="Register Cashier" />
-      <Button fx:id="orderBtn" layoutX="199.0" layoutY="310.0" mnemonicParsing="false" onAction="#orderMedicines" prefHeight="70.0" prefWidth="126.0" text="OrderMedicine" />
-      <Button fx:id="addBtn" layoutX="335.0" layoutY="310.0" mnemonicParsing="false" onAction="#addMedicine" prefHeight="70.0" prefWidth="126.0" text="AddNewMedicine" />
-      <Button fx:id="checkStock" layoutX="469.0" layoutY="163.0" mnemonicParsing="false" onAction="#ManageStock" prefHeight="70.0" prefWidth="147.0" text="ManageAvlStock" />
-      <Button layoutX="469.0" layoutY="310.0" mnemonicParsing="false" onAction="#removeMedicine" prefHeight="70.0" prefWidth="147.0" text="Remove Medicine" />
-      <AnchorPane prefHeight="600.0" prefWidth="140.0" style="-fx-background-color: purple;">
+      <AnchorPane layoutY="-6.0" prefHeight="630.0" prefWidth="166.0" style="-fx-background-color: #2596be;">
          <children>
-            <Button fx:id="retBut" layoutX="28.0" layoutY="11.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button fx:id="retBut" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="13.0" />
                </font>
             </Button>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="191.0" layoutY="115.0" prefHeight="480.0" prefWidth="533.0">
+         <children>
+            <Button fx:id="reportBtn" layoutX="348.0" layoutY="198.0" mnemonicParsing="false" onAction="#showReport" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Button layoutX="21.0" layoutY="22.0" mnemonicParsing="false" onAction="#RegisterCashier" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Button fx:id="orderBtn" layoutX="186.0" layoutY="22.0" mnemonicParsing="false" onAction="#orderMedicines" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Button fx:id="addBtn" layoutX="186.0" layoutY="198.0" mnemonicParsing="false" onAction="#addMedicine" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Button fx:id="checkStock" layoutX="27.0" layoutY="198.0" mnemonicParsing="false" onAction="#ManageStock" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Button layoutX="348.0" layoutY="22.0" mnemonicParsing="false" onAction="#removeMedicine" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Text layoutX="61.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Stock" />
+            <Text layoutX="217.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Order Medicine" />
+            <Text layoutX="377.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Remove Medicine" />
+            <Text layoutX="50.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Register Cashier" />
+            <Text layoutX="212.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add New Medicine" />
+            <Text layoutX="381.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Generate Report" />
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="72.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/icons8-add-user-male-100.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="236.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/icons8-purchase-order.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="399.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/icons8-minus-100.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="72.0" layoutY="248.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/icons8-pharmacy-shop-100.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="237.0" layoutY="248.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/icons8-add-new-80.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="399.0" layoutY="248.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/icons8-graph-report-100.png" />
+               </image>
+            </ImageView>
+            <Button layoutX="193.0" layoutY="345.0" mnemonicParsing="false" onAction="#AddSupplier" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Text layoutX="231.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Supplier" />
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="244.0" layoutY="389.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/icons8-add-user-male-100.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
