--- a/src/main/resources/com/Pharmacy/Project/CashierPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/CashierPage.fxml
@@ -1,11 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.CashierController">
    <children>
-      <Button fx:id="saleBtn" layoutX="180.0" layoutY="193.0" mnemonicParsing="false" onAction="#startSale" text="StartSale" />
-      <Button fx:id="handleReturns" layoutX="375.0" layoutY="207.0" mnemonicParsing="false" onAction="#handleReturnFunction" text="ReturnMedicine" />
+      <AnchorPane prefHeight="600.0" prefWidth="200.0" style="-fx-background-color: #2596be;" />
+      <AnchorPane layoutX="243.0" layoutY="155.0" prefHeight="431.0" prefWidth="483.0">
+         <children>
+            <Text layoutX="84.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start Sale">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Text>
+            <Text layoutX="296.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Return Sale" textAlignment="CENTER" wrappingWidth="116.77197265625">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Text>
+            <Button disable="true" layoutX="52.0" layoutY="17.0" mnemonicParsing="false" opacity="0.14" prefHeight="128.0" prefWidth="168.0" style="-fx-background-color: Transparent; -fx-border-color: purple; -fx-border-radius: 20;" text=" " wrapText="true">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="49.0" fitWidth="62.0" layoutX="112.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/sale.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="40.0" fitWidth="68.0" layoutX="334.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/return.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="handleReturns" layoutX="270.0" layoutY="17.0" mnemonicParsing="false" onAction="#handleReturnFunction" prefHeight="128.0" prefWidth="168.0" style="-fx-background-color: transparent; -fx-border-color: purple; -fx-border-radius: 20;" text=" " wrapText="true">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Button fx:id="saleBtn" layoutX="53.0" layoutY="180.0" mnemonicParsing="false" onAction="#startSale" prefHeight="128.0" prefWidth="168.0" style="-fx-border-color: purple; -fx-background-color: transparent; -fx-border-radius: 20;" text=" ">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Button disable="true" layoutX="270.0" layoutY="180.0" mnemonicParsing="false" opacity="0.13" prefHeight="128.0" prefWidth="168.0" style="-fx-background-color: Transparent; -fx-border-color: purple; -fx-border-radius: 20;" text=" " wrapText="true">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+      <Text layoutX="364.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cashier Controls" wrappingWidth="241.7138671875">
+         <font>
+            <Font name="Arial Bold" size="30.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
