--- a/src/main/resources/com/Pharmacy/Project/LoginPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/LoginPage.fxml
@@ -13,30 +13,34 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Pharmacy.Project.Controllers.LoginController">
    <children>
-      <AnchorPane fx:id="scenePane" prefHeight="600.0" prefWidth="257.0" style="-fx-background-color: #51E5FF;">
+      <AnchorPane fx:id="scenePane" prefHeight="600.0" prefWidth="245.0" style="-fx-background-color:#2596be;">
          <children>
-            <Text layoutX="25.0" layoutY="172.0" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EZ       PHARMACY" textAlignment="CENTER" wrappingWidth="250.21630859375">
+            <Text layoutX="14.0" layoutY="162.0" lineSpacing="5.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EZ       PHARMACY" textAlignment="CENTER" wrappingWidth="250.21630859375">
                <font>
                   <Font name="Arial" size="36.0" />
                </font>
             </Text>
-            <ImageView fitHeight="59.0" fitWidth="54.0" layoutX="161.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="59.0" fitWidth="54.0" layoutX="139.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../Assets/pharmacy.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <Text layoutX="375.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login to view Controls" textAlignment="CENTER" wrappingWidth="194.3798828125">
+      <Text layoutX="375.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login to view Controls" textAlignment="CENTER" wrappingWidth="194.3798828125">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField id="id" fx:id="loginId" layoutX="386.0" layoutY="196.0" promptText="Enter emplyee id" />
-      <Button id="login-btn" fx:id="loginButton" layoutX="413.0" layoutY="410.0" mnemonicParsing="false" onAction="#login" prefHeight="36.0" prefWidth="106.0" text="Login" />
-      <ChoiceBox fx:id="userchoice" layoutX="391.0" layoutY="326.0" prefWidth="150.0" />
+      <TextField id="id" fx:id="loginId" layoutX="386.0" layoutY="196.0" promptText="Enter emplyee id" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0 0 2 0;" />
+      <Button fx:id="loginButton" layoutX="432.0" layoutY="394.0" mnemonicParsing="false" onAction="#login" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #2596be; -fx-background-radius: 15;" text="Login" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
+      <ChoiceBox fx:id="userchoice" layoutX="391.0" layoutY="326.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0 0 2 0;" />
       <Label fx:id="userRole" layoutX="350.0" layoutY="330.0" text="Role" />
-      <PasswordField fx:id="loginPassword" layoutX="386.0" layoutY="261.0" promptText="Password" />
+      <PasswordField fx:id="loginPassword" layoutX="386.0" layoutY="261.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0 0 2 0;" />
       <ImageView fitHeight="26.0" fitWidth="33.0" layoutX="349.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../Assets/usernameIcon.png" />
