--- a/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/AdminPage.fxml
@@ -16,7 +16,7 @@
       </Text>
       <AnchorPane layoutY="-6.0" prefHeight="630.0" prefWidth="166.0" style="-fx-background-color: #2596be;">
          <children>
-            <Button fx:id="retBut" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="Back" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button fx:id="retBut" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOut" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #d73a49; -fx-background-radius: 15;" text="LogOut" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="13.0" />
                </font>
@@ -67,15 +67,20 @@
                   <Image url="@../../Assets/icons8-graph-report-100.png" />
                </image>
             </ImageView>
-            <Button layoutX="190.0" layoutY="345.0" mnemonicParsing="false" onAction="#AddSupplier" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
-            <Text layoutX="231.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Supplier" />
-            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="244.0" layoutY="389.0" pickOnBounds="true" preserveRatio="true">
+            <Button layoutX="275.0" layoutY="345.0" mnemonicParsing="false" onAction="#AddSupplier" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Text layoutX="313.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Supplier" />
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="326.0" layoutY="383.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../Assets/icons8-add-user-male-100.png" />
+                  <Image url="@../../Assets/icons8-supplier-100.png" />
                </image>
             </ImageView>
-            <Button layoutX="27.0" layoutY="345.0" mnemonicParsing="false" onAction="#manageOrders" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
-            <Text layoutX="58.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Orders" />
+            <Button layoutX="89.0" layoutY="346.0" mnemonicParsing="false" onAction="#manageOrders" prefHeight="121.0" prefWidth="147.0" style="-fx-background-color: transparent; -fx-border-color: Blue; -fx-border-radius: 20;" text=" " />
+            <Text layoutX="126.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manage Orders" />
+            <ImageView fitHeight="46.0" fitWidth="62.0" layoutX="145.0" layoutY="390.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Assets/icons8-manage-64.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
