--- a/src/main/resources/com/Pharmacy/Project/StockUpdatePage.fxml
+++ b/src/main/resources/com/Pharmacy/Project/StockUpdatePage.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -23,19 +22,16 @@
                 <Font name="Arial Black" size="27.0" />
             </font>
         </Label>
-        <TextField fx:id="searchMed1" layoutX="180.0" layoutY="101.0" prefHeight="28.0" prefWidth="392.0" promptText="Type Medicine Name" />
-        <Button fx:id="searchBut1" alignment="CENTER" contentDisplay="CENTER" layoutX="582.0" layoutY="101.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="62.0" style="-fx-background-color: #009ee2; -fx-border-width: 1; -fx-border-radius: 15; -fx-background-radius: 15;" text="Search" textAlignment="CENTER" textFill="WHITE">
-            <font>
-                <Font name="Verdana" size="12.0" />
-            </font>
-        </Button>
-        <AnchorPane layoutX="150.0" layoutY="482.0" prefHeight="118.0" prefWidth="600.0" />
-        <Text layoutX="179.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Medicines" />
-      <ListView fx:id="medList" layoutX="176.0" layoutY="176.0" prefHeight="209.0" prefWidth="475.0" />
-          <Button fx:id="addBtn" layoutX="579.0" layoutY="391.0" mnemonicParsing="false" onAction="#AddStock" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Update" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-              <font>
-                  <Font size="13.0" />
-              </font>
-          </Button>
+        <AnchorPane layoutX="150.0" layoutY="482.0" prefHeight="118.0" prefWidth="600.0">
+         <children>
+                <Button fx:id="addBtn" layoutX="440.0" mnemonicParsing="false" onAction="#AddStock" prefHeight="32.0" prefWidth="68.0" style="-fx-background-color: #6bc45a; -fx-background-radius: 15;" text="Update" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Button>
+         </children></AnchorPane>
+        <Text layoutX="176.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Available Medicines" />
+      <ListView fx:id="medList" layoutX="176.0" layoutY="169.0" prefHeight="300.0" prefWidth="475.0" />
+      <Label fx:id="headerLabel" layoutX="176.0" layoutY="146.0" text=" " />
     </children>
 </AnchorPane>
